feat(cli): add interactive init mode with service discovery (R-S7.6)